SERVER-40928 mongocryptd --help output list incorrect default port

GitOrigin-RevId: 7a698c8bdc6236607c1a58f226ecdc5ff5cf053e